Модуль NPM Новый three.min.js Патч для нового рендера

--- a/index.html
+++ b/index.html
@@ -23,14 +23,12 @@
 
   <!-- Overlay HUD -->
   <div id="hud">
-    <div class="hud-panel top-right">
-      <a href="http://github.com/CoryG89/MoonDemo">WebGL Moon Demo</a> (Three.JS)
-      <br />Created by <a href="http://coryg89.github.io/">Cory Gross</a>
-    </div>
     <div class="hud-panel bottom-right">
       <em>h</em> to toggle HUD
       <br /><em>p</em> for screenshot
       <br /><em>f</em> for fullscreen
+      <br /><em>l</em> for shadows 
+      
     </div>
     <div class="hud-panel center"></div>
   </div>
