Теперь все хендлится в одном месте, есть события over, out, down, up Может прикручу svg-ху, на которой можео будет выделять отдельные элементы

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
   <script type="text/javascript" src="vendor/screenfull.min.js"></script>
 
   <!-- Include Three.JS scene controller script -->
-  <!--<script type="text/javascript" src="js/index.js"></script>
+  <script type="text/javascript" src="js/index.js"></script>
   <script type="text/javascript" src="js/hooker.js"></script>
-  -->
-  <script type="text/javascript" src="dist/bundle.js"></script>
+  
+  <!--<script type="text/javascript" src="dist/bundle.js"></script>-->
   
 
   <noscript>
