--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
     <p id="loading-message"></p>
   </div>
 
+  <script type="text/javascript" src="http://canvg.github.io/canvg/rgbcolor.js"></script> 
+  <script type="text/javascript" src="http://canvg.github.io/canvg/StackBlur.js"></script>
+  <script type="text/javascript" src="http://canvg.github.io/canvg/canvg.js"></script> 
   
   <!-- Include vendor scripts -->
   <script type="text/javascript" src="vendor/three.min.js"></script>
@@ -49,6 +52,7 @@
   <!-- Include Three.JS scene controller script -->
   <script type="text/javascript" src="js/index.js"></script>
   <script type="text/javascript" src="js/hooker.js"></script>
+  <script type="text/javascript" src="js/svgtexture.js"></script>
   
   <!--<script type="text/javascript" src="dist/bundle.js"></script>-->
   
