--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
     <p id="loading-message"></p>
   </div>
 
+  <!--Нужно для рендра SVG в текстуру-->
   <script type="text/javascript" src="http://canvg.github.io/canvg/rgbcolor.js"></script> 
   <script type="text/javascript" src="http://canvg.github.io/canvg/StackBlur.js"></script>
   <script type="text/javascript" src="http://canvg.github.io/canvg/canvg.js"></script> 
   
-  <!-- Include vendor scripts -->
+
+  <!--Иной бред-->
   <script type="text/javascript" src="vendor/three.min.js"></script>
   <script type="text/javascript" src="vendor/TrackballControls.js"></script>
   <script type="text/javascript" src="vendor/detector.min.js"></script>
