--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
   </div>
 
   <!--Нужно для рендра SVG в текстуру-->
-  <script type="text/javascript" src="http://canvg.github.io/canvg/rgbcolor.js"></script> 
-  <script type="text/javascript" src="http://canvg.github.io/canvg/StackBlur.js"></script>
-  <script type="text/javascript" src="http://canvg.github.io/canvg/canvg.js"></script> 
+  <script type="text/javascript" src="vendor/rgbcolor.js"></script> 
+  <script type="text/javascript" src="vendor/StackBlur.js"></script>
+  <script type="text/javascript" src="vendor/canvg.js"></script> 
   
 
   <!--Иной бред-->
